Add :en locales + fix :ru locales

--- a/config/locales/default/ru.yml
+++ b/config/locales/default/ru.yml
@@ -1,6 +1,7 @@
 ru:
   meta:
-    description: Профессиональное проектирование, интеграция, разработка и внедрение Вашего проекта любой сложности, чистый код, постоянное тестирование и своевременная техподдержка выведут Ваш продукт на новый бизнес-уровень.
+    description: 'Профессиональное проектирование, интеграция, разработка и внедрение Вашего проекта любой сложности,
+    чистый код, постоянное тестирование и своевременная техподдержка выведут Ваш продукт на новый бизнес-уровень.'
   menu:
     main: Главная
     about: О себе
