--- a/config/locales/default/en.yml
+++ b/config/locales/default/en.yml
@@ -12,3 +12,7 @@ en:
   full_name: Sergey Golovkin
   copyright: All rights reserved
   sole_proprietor: SP Golovkin Sergey Sergeevich
+  error404:
+    title: Page not found
+  error500:
+    title: Internal server error
