Add blog posts controller, blog menu and page loader on turbolinks

--- a/config/locales/default/en.yml
+++ b/config/locales/default/en.yml
@@ -4,6 +4,7 @@ en:
     of any complexity grade as well as clean code and constant testing will lead your product to a new business level.'
   menu:
     main: Home
+    blog: Blog
     about: About
     contacts: Contacts
   loading: Loading...
