--- a/config/locales/default/ru.yml
+++ b/config/locales/default/ru.yml
@@ -4,6 +4,7 @@ ru:
     чистый код, постоянное тестирование и своевременная техподдержка выведут Ваш продукт на новый бизнес-уровень.'
   menu:
     main: Главная
+    blog: Блог
     about: О себе
     contacts: Контакты
   loading: Загрузка...
